--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.563.0",
+    "mongoose": "^9.1.5",
     "next": "16.1.4",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
