--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -9,23 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
-    "next": "16.1.4",
-    "nodemailer": "^7.0.12",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "next": "^16.1.4",
+    "nodemailer": "^7.0.13",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/nodemailer": "^7.0.5",
-    "@types/react": "^19",
+    "@types/node": "^20.19.30",
+    "@types/nodemailer": "^7.0.9",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
