--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -9,16 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-code-block-lowlight": "^3.17.1",
+    "@tiptap/extension-image": "^3.17.1",
+    "@tiptap/extension-link": "^3.17.1",
+    "@tiptap/react": "^3.17.1",
+    "@tiptap/starter-kit": "^3.17.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^4.0.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
     "next": "^16.1.4",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "recharts": "^3.7.0",
+    "tiptap": "^1.32.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
