--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
     "next": "^16.1.4",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
     "react": "^19.2.3",
