--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -30,11 +30,15 @@
     "nodemailer": "^7.0.13",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.7.0",
-    "tiptap": "^1.32.2"
+    "tiptap": "^1.32.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20.19.30",
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19.2.10",
